--- a/Stylesheet/Portfolio.css
+++ b/Stylesheet/Portfolio.css
@@ -15,12 +15,26 @@ h1 {
     text-align: center;
     margin-top: 3%;
     color: #1a1a1a;
+    font-size: 24px; /* Initial font size */
+    transform-origin: center; /* Set the transform origin to the center */
+    transition: font-size 0.5s, transform 0.5s, filter 0.5s;
 }
+
 h1:hover {
-    filter: grayscale(5%);
-    transform: scale(1.1);
-    transition: transform 1s;
+    font-size: 28px; /* Smaller font size on hover */
+    filter: grayscale(5%); /* Apply grayscale on hover */
+    transform: scale(1.1); /* Scale up by 10% on hover */
 }
+
+h1:not(:hover) {
+    font-size: 24px; /* Return to the normal font size when not hovering */
+    filter: grayscale(0%); /* Remove grayscale when not hovering */
+    transform: scale(1); /* Return to the normal scale when not hovering */
+    transition: font-size 0.5s, transform 0.5s, filter 0.5s;
+}
+
+
+
 .white-text {
     color: #fff;
     padding-top: 10vh;
@@ -41,10 +55,22 @@ p:hover {
 }
 .center {
     text-align: center;
+    font-size: 24px; /* Initial font size */
+    transform-origin: center; /* Set the transform origin to the center */
+    transition: font-size 0.5s, transform 0.5s, filter 0.5s;
 }
+
 .center:hover {
-    transition: transform 2s;
-    transform: scale(1.1);
+    font-size: 25px; /* bigger font size on hover */
+    filter: grayscale(5%); /* Apply grayscale on hover */
+    transform: scale(1.1); /* Scale up by 10% on hover */
+}
+
+.center:not(:hover) {
+    font-size: 24px; /* Return to the normal font size when not hovering */
+    filter: grayscale(0%); /* Remove grayscale when not hovering */
+    transform: scale(1); /* Return to the normal scale when not hovering */
+    transition: font-size 0.5s, transform 0.5s, filter 0.5s;
 }
 a {
     color: blue;
