--- a/Stylesheet/Portfolio.css
+++ b/Stylesheet/Portfolio.css
@@ -78,7 +78,7 @@ a {
     text-decoration: underline;
 }
 q {
-    font-style: italic;
+    font-style:  Editorial New;
 }
 img {
     filter: grayscale(75%);
@@ -272,6 +272,20 @@ footer {
     padding: 1.6%;
     height: 450px;
     background-color: #4d4d4d;
+}
+.Column_3 {
+    float: left;
+    width: 50%;
+    padding: 1.6%;
+    height: 450px;
+    background-color: #4d4d4d;
+}
+.Column_4 {
+    float: left;
+    width: 50%;
+    padding: 1.6%;
+    height: 450px;
+    background-color: #f2f2f2;
 }
 .Column_tall {
     padding-top: 3.5%;
